--- a/thank_you.html
+++ b/thank_you.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="nl">
- <head>
+<!DOCTYPE html><html lang="nl"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
@@ -11,7 +9,7 @@
   <header class="l-header">
    <div class="l-container l-header__wrapper">
     <div class="l-header__brand">
-     <a href="index.html" class="c-logo"> <img src="https://images.unsplash.com/photo-1599305445671-ac291c95aaa9?w=150&amp;h=40&amp;fit=crop" alt="AutoElite Deutschland Logo" class="c-logo__img" decoding="async" loading="lazy" width="150" height="40"> <span class="c-logo__text">AutoElite Deutschland</span> </a>
+     <a href="index.html" class="c-logo"> <img src="img/label-van-made-in-germany.jpg" alt="AutoElite Deutschland Logo" class="c-logo__img" decoding="async" loading="lazy" width="150" height="40"> <span class="c-logo__text">AutoElite Deutschland</span> </a>
     </div>
     <nav class="c-nav" id="main-nav" aria-label="Hauptnavigation">
      <button type="button" class="c-nav__toggle" aria-controls="main-nav" aria-expanded="false"><span class="c-nav__toggle-icon"></span></button>
@@ -39,7 +37,7 @@
    <section class="py-4 py-md-5 bg-light" data-aos="fade-up">
     <div class="container text-center">
      <div class="ratio ratio-16x9 mb-4" style="max-width:800px;margin:auto;">
-      <img src="https://images.unsplash.com/photo-1597764690523-15bea4c581c9?w=800&amp;h=450&amp;fit=crop" alt="Bedankt voor uw aanvraag bij AutoService Premium" class="img-fluid rounded" loading="lazy" width="800" height="450" style="object-fit:cover">
+      <img src="img/16940194.jpg" alt="Bedankt voor uw aanvraag bij AutoService Premium" class="img-fluid rounded" loading="lazy" width="800" height="450" style="object-fit:cover">
      </div>
      <h2 class="display-6 fw-bold mb-3">We staan klaar om uw auto in topconditie te houden</h2>
      <p class="lead text-muted mb-4">Onze experts nemen spoedig contact met u op voor de bevestiging van uw afspraak.</p>
@@ -50,7 +48,7 @@
   <footer class="l-footer">
    <div class="l-container l-footer__wrapper">
     <div class="l-footer__brand">
-     <a href="index.html" class="c-logo"> <img src="https://images.unsplash.com/photo-1599305445671-ac291c95aaa9?w=150&amp;h=40&amp;fit=crop" alt="AutoElite Deutschland Logo" class="c-logo__img" decoding="async" loading="lazy" width="150" height="40"> <span class="c-logo__text">AutoElite Deutschland</span> </a>
+     <a href="index.html" class="c-logo"> <img src="img/label-van-made-in-germany.jpg" alt="AutoElite Deutschland Logo" class="c-logo__img" decoding="async" loading="lazy" width="150" height="40"> <span class="c-logo__text">AutoElite Deutschland</span> </a>
      <div class="l-footer__contact">
       <p><strong>Adresse:</strong> Königsallee 60, 40212 Düsseldorf, Deutschland</p>
       <p><strong>Telefon:</strong> <a href="tel:+492118632450">+49-211-8632-4500</a></p>
@@ -68,6 +66,6 @@
     <p class="l-footer__copyright">© 2025 AutoElite Deutschland. Alle Rechte vorbehalten.</p>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
