--- a/services.html
+++ b/services.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="de">
- <head>
+<!DOCTYPE html><html lang="de"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Entdecken Sie unsere umfassenden Automobildienstleistungen – von Wartung bis Reparatur. Professionelle Betreuung für Ihr Fahrzeug.">
@@ -18,7 +16,7 @@
   <header class="l-header">
    <div class="l-container l-header__wrapper">
     <div class="l-header__brand">
-     <a href="index.html" class="c-logo"> <img src="https://images.unsplash.com/photo-1599305445671-ac291c95aaa9?w=150&amp;h=40&amp;fit=crop" alt="AutoElite Deutschland Logo" class="c-logo__img" decoding="async" loading="lazy" width="150" height="40"> <span class="c-logo__text">AutoElite Deutschland</span> </a>
+     <a href="index.html" class="c-logo"> <img src="img/etikett-made-in-germany.jpg" alt="AutoElite Deutschland Logo" class="c-logo__img" decoding="async" loading="lazy" width="150" height="40"> <span class="c-logo__text">AutoElite Deutschland</span> </a>
     </div>
     <nav class="c-nav" id="main-nav" aria-label="Hauptnavigation">
      <button type="button" class="c-nav__toggle" aria-controls="main-nav" aria-expanded="false"><span class="c-nav__toggle-icon"></span></button>
@@ -50,7 +48,7 @@
       <div class="c-category-card">
        <div class="c-category-card__icon-wrapper">
         <svg class="c-category-card__icon" width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Wartung Icon">
-         <rect x="8" y="24" width="48" height="24" rx="2" stroke="currentColor" stroke-width="2" fill="none" /> <circle cx="20" cy="52" r="6" stroke="currentColor" stroke-width="2" fill="none" /> <circle cx="44" cy="52" r="6" stroke="currentColor" stroke-width="2" fill="none" /> <path d="M32 16L28 24H36L32 16Z" fill="currentColor" /> <path d="M16 32H48" stroke="currentColor" stroke-width="2" />
+         <rect x="8" y="24" width="48" height="24" rx="2" stroke="currentColor" stroke-width="2" fill="none"></rect> <circle cx="20" cy="52" r="6" stroke="currentColor" stroke-width="2" fill="none"></circle> <circle cx="44" cy="52" r="6" stroke="currentColor" stroke-width="2" fill="none"></circle> <path d="M32 16L28 24H36L32 16Z" fill="currentColor"></path> <path d="M16 32H48" stroke="currentColor" stroke-width="2"></path>
         </svg>
        </div>
        <h3 class="c-category-card__title">Wartung &amp; Inspektion</h3>
@@ -60,7 +58,7 @@
       <div class="c-category-card">
        <div class="c-category-card__icon-wrapper">
         <svg class="c-category-card__icon" width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Reparatur Icon">
-         <path d="M16 48L32 32L48 48" stroke="currentColor" stroke-width="2" fill="none" /> <path d="M32 32L40 24" stroke="currentColor" stroke-width="2" /> <circle cx="40" cy="24" r="4" stroke="currentColor" stroke-width="2" fill="none" /> <path d="M24 40L32 32" stroke="currentColor" stroke-width="2" /> <rect x="20" y="44" width="24" height="8" rx="1" fill="currentColor" />
+         <path d="M16 48L32 32L48 48" stroke="currentColor" stroke-width="2" fill="none"></path> <path d="M32 32L40 24" stroke="currentColor" stroke-width="2"></path> <circle cx="40" cy="24" r="4" stroke="currentColor" stroke-width="2" fill="none"></circle> <path d="M24 40L32 32" stroke="currentColor" stroke-width="2"></path> <rect x="20" y="44" width="24" height="8" rx="1" fill="currentColor"></rect>
         </svg>
        </div>
        <h3 class="c-category-card__title">Reparaturen</h3>
@@ -70,7 +68,7 @@
       <div class="c-category-card">
        <div class="c-category-card__icon-wrapper">
         <svg class="c-category-card__icon" width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Diagnose Icon">
-         <rect x="16" y="20" width="32" height="24" rx="2" stroke="currentColor" stroke-width="2" fill="none" /> <line x1="24" y1="28" x2="40" y2="28" stroke="currentColor" stroke-width="2" /> <line x1="24" y1="34" x2="36" y2="34" stroke="currentColor" stroke-width="2" /> <circle cx="32" cy="52" r="4" stroke="currentColor" stroke-width="2" fill="none" /> <line x1="32" y1="44" x2="32" y2="48" stroke="currentColor" stroke-width="2" />
+         <rect x="16" y="20" width="32" height="24" rx="2" stroke="currentColor" stroke-width="2" fill="none"></rect> <line x1="24" y1="28" x2="40" y2="28" stroke="currentColor" stroke-width="2"></line> <line x1="24" y1="34" x2="36" y2="34" stroke="currentColor" stroke-width="2"></line> <circle cx="32" cy="52" r="4" stroke="currentColor" stroke-width="2" fill="none"></circle> <line x1="32" y1="44" x2="32" y2="48" stroke="currentColor" stroke-width="2"></line>
         </svg>
        </div>
        <h3 class="c-category-card__title">Diagnose &amp; Analyse</h3>
@@ -80,7 +78,7 @@
       <div class="c-category-card">
        <div class="c-category-card__icon-wrapper">
         <svg class="c-category-card__icon" width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Tuning Icon">
-         <path d="M12 32C12 20.954 20.954 12 32 12C43.046 12 52 20.954 52 32C52 43.046 43.046 52 32 52C20.954 52 12 43.046 12 32Z" stroke="currentColor" stroke-width="2" fill="none" /> <path d="M32 20V32L40 40" stroke="currentColor" stroke-width="2" /> <circle cx="32" cy="32" r="3" fill="currentColor" />
+         <path d="M12 32C12 20.954 20.954 12 32 12C43.046 12 52 20.954 52 32C52 43.046 43.046 52 32 52C20.954 52 12 43.046 12 32Z" stroke="currentColor" stroke-width="2" fill="none"></path> <path d="M32 20V32L40 40" stroke="currentColor" stroke-width="2"></path> <circle cx="32" cy="32" r="3" fill="currentColor"></circle>
         </svg>
        </div>
        <h3 class="c-category-card__title">Performance-Tuning</h3>
@@ -94,7 +92,7 @@
     <div class="l-container">
      <div class="l-service-detail">
       <div class="l-service-detail__media">
-       <img src="https://images.unsplash.com/photo-1486262715619-67b85e0b08d3?w=800&amp;h=600&amp;fit=crop" alt="Professionelle Autowartung, Mechaniker bei der Arbeit, Werkstatt, Inspektion" class="l-service-detail__image" width="800" height="600" loading="lazy">
+       <img src="img/216723.jpg" alt="Professionelle Autowartung, Mechaniker bei der Arbeit, Werkstatt, Inspektion" class="l-service-detail__image" width="800" height="600" loading="lazy">
       </div>
       <div class="l-service-detail__content">
        <h2 class="l-service-detail__title">Wartung &amp; Inspektion</h2>
@@ -129,7 +127,7 @@
        <a href="#buchung" class="c-button">Reparatur anfragen</a>
       </div>
       <div class="l-service-detail__media">
-       <img src="https://images.unsplash.com/photo-1625047509168-a7026f36de04?w=800&amp;h=600&amp;fit=crop" alt="Autoreparatur, Mechaniker mit Werkzeug, Motorraum, professionelle Reparatur" class="l-service-detail__image" width="800" height="600" loading="lazy">
+       <img src="img/33397.jpg" alt="Autoreparatur, Mechaniker mit Werkzeug, Motorraum, professionelle Reparatur" class="l-service-detail__image" width="800" height="600" loading="lazy">
       </div>
      </div>
     </div>
@@ -138,7 +136,7 @@
     <div class="l-container">
      <div class="l-service-detail">
       <div class="l-service-detail__media">
-       <img src="https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?w=800&amp;h=600&amp;fit=crop" alt="Fahrzeugdiagnose, Computer-Analyse, moderne Technologie, Diagnosegerät" class="l-service-detail__image" width="800" height="600" loading="lazy">
+       <img src="img/22477.jpg" alt="Fahrzeugdiagnose, Computer-Analyse, moderne Technologie, Diagnosegerät" class="l-service-detail__image" width="800" height="600" loading="lazy">
       </div>
       <div class="l-service-detail__content">
        <h2 class="l-service-detail__title">Diagnose &amp; Analyse</h2>
@@ -173,7 +171,7 @@
        <a href="#buchung" class="c-button">Tuning-Beratung</a>
       </div>
       <div class="l-service-detail__media">
-       <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?w=800&amp;h=600&amp;fit=crop" alt="Sportauto, Performance-Tuning, Leistungssteigerung, modernes Fahrzeug" class="l-service-detail__image" width="800" height="600" loading="lazy">
+       <img src="img/40802.jpg" alt="Sportauto, Performance-Tuning, Leistungssteigerung, modernes Fahrzeug" class="l-service-detail__image" width="800" height="600" loading="lazy">
       </div>
      </div>
     </div>
@@ -187,7 +185,7 @@
      <div class="l-location-grid">
       <div class="c-location-card">
        <div class="c-location-card__map">
-        <img src="https://images.unsplash.com/photo-1524661135-423995f22d0b?w=600&amp;h=400&amp;fit=crop" alt="Stadtansicht München, moderne Architektur, urbanes Umfeld" class="c-location-card__image" width="600" height="400" loading="lazy">
+        <img src="img/794061.jpg" alt="Stadtansicht München, moderne Architektur, urbanes Umfeld" class="c-location-card__image" width="600" height="400" loading="lazy">
        </div>
        <div class="c-location-card__content">
         <h3 class="c-location-card__title">München Zentrum</h3>
@@ -202,7 +200,7 @@
       </div>
       <div class="c-location-card">
        <div class="c-location-card__map">
-        <img src="https://images.unsplash.com/photo-1560969184-10fe8719e047?w=600&amp;h=400&amp;fit=crop" alt="Stadtansicht Berlin, Hauptstadt, moderne Metropole" class="c-location-card__image" width="600" height="400" loading="lazy">
+        <img src="img/50980.jpg" alt="Stadtansicht Berlin, Hauptstadt, moderne Metropole" class="c-location-card__image" width="600" height="400" loading="lazy">
        </div>
        <div class="c-location-card__content">
         <h3 class="c-location-card__title">Berlin Mitte</h3>
@@ -217,7 +215,7 @@
       </div>
       <div class="c-location-card">
        <div class="c-location-card__map">
-        <img src="https://images.unsplash.com/photo-1568605117036-5fe5e7bab0b7?w=600&amp;h=400&amp;fit=crop" alt="Stadtansicht Hamburg, Hafen, norddeutsche Stadt" class="c-location-card__image" width="600" height="400" loading="lazy">
+        <img src="img/13457673.jpg" alt="Stadtansicht Hamburg, Hafen, norddeutsche Stadt" class="c-location-card__image" width="600" height="400" loading="lazy">
        </div>
        <div class="c-location-card__content">
         <h3 class="c-location-card__title">Hamburg HafenCity</h3>
@@ -242,7 +240,7 @@
        <div class="l-booking-info__benefits">
         <div class="l-booking-benefit">
          <svg class="l-booking-benefit__icon" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Schnell Icon">
-          <circle cx="16" cy="16" r="14" stroke="currentColor" stroke-width="2" fill="none" /> <path d="M16 8V16L22 19" stroke="currentColor" stroke-width="2" />
+          <circle cx="16" cy="16" r="14" stroke="currentColor" stroke-width="2" fill="none"></circle> <path d="M16 8V16L22 19" stroke="currentColor" stroke-width="2"></path>
          </svg>
          <div>
           <h3 class="l-booking-benefit__title">Schnelle Bestätigung</h3>
@@ -251,7 +249,7 @@
         </div>
         <div class="l-booking-benefit">
          <svg class="l-booking-benefit__icon" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Flexibel Icon">
-          <rect x="6" y="8" width="20" height="18" rx="2" stroke="currentColor" stroke-width="2" fill="none" /> <line x1="6" y1="13" x2="26" y2="13" stroke="currentColor" stroke-width="2" /> <line x1="11" y1="5" x2="11" y2="11" stroke="currentColor" stroke-width="2" /> <line x1="21" y1="5" x2="21" y2="11" stroke="currentColor" stroke-width="2" />
+          <rect x="6" y="8" width="20" height="18" rx="2" stroke="currentColor" stroke-width="2" fill="none"></rect> <line x1="6" y1="13" x2="26" y2="13" stroke="currentColor" stroke-width="2"></line> <line x1="11" y1="5" x2="11" y2="11" stroke="currentColor" stroke-width="2"></line> <line x1="21" y1="5" x2="21" y2="11" stroke="currentColor" stroke-width="2"></line>
          </svg>
          <div>
           <h3 class="l-booking-benefit__title">Flexible Termine</h3>
@@ -260,7 +258,7 @@
         </div>
         <div class="l-booking-benefit">
          <svg class="l-booking-benefit__icon" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Kostenlos Icon">
-          <path d="M16 6L19 13H26L20 18L22 25L16 21L10 25L12 18L6 13H13L16 6Z" stroke="currentColor" stroke-width="2" fill="none" />
+          <path d="M16 6L19 13H26L20 18L22 25L16 21L10 25L12 18L6 13H13L16 6Z" stroke="currentColor" stroke-width="2" fill="none"></path>
          </svg>
          <div>
           <h3 class="l-booking-benefit__title">Kostenlose Beratung</h3>
@@ -272,31 +270,31 @@
       <div class="l-booking-form">
        <form class="c-form" action="thank_you.html" method="POST">
         <div class="c-form__group">
-         <label for="name" class="c-form__label">Vollständiger Name</label> <input type="text" id="name" name="name" class="c-form__input" required>
+         <label for="name" class="c-form__label">Vollständiger Name</label> <input type="text" id="name" name="name" class="c-form__input" required="">
          <div class="c-form__error"></div>
         </div>
         <div class="c-form__group">
-         <label for="email" class="c-form__label">E-Mail-Adresse</label> <input type="email" id="email" name="email" class="c-form__input" required>
+         <label for="email" class="c-form__label">E-Mail-Adresse</label> <input type="email" id="email" name="email" class="c-form__input" required="">
          <div class="c-form__error"></div>
         </div>
         <div class="c-form__group">
-         <label for="phone" class="c-form__label">Telefonnummer</label> <input type="tel" id="phone" name="phone" class="c-form__input" required>
+         <label for="phone" class="c-form__label">Telefonnummer</label> <input type="tel" id="phone" name="phone" class="c-form__input" required="">
          <div class="c-form__error"></div>
         </div>
         <div class="c-form__group">
-         <label for="location" class="c-form__label">Standort</label> <select id="location" name="location" class="c-form__input" required> <option value="">Bitte wählen</option> <option value="muenchen">München Zentrum</option> <option value="berlin">Berlin Mitte</option> <option value="hamburg">Hamburg HafenCity</option> </select>
+         <label for="location" class="c-form__label">Standort</label> <select id="location" name="location" class="c-form__input" required=""> <option value="">Bitte wählen</option> <option value="muenchen">München Zentrum</option> <option value="berlin">Berlin Mitte</option> <option value="hamburg">Hamburg HafenCity</option> </select>
          <div class="c-form__error"></div>
         </div>
         <div class="c-form__group">
-         <label for="service" class="c-form__label">Gewünschte Dienstleistung</label> <select id="service" name="service" class="c-form__input" required> <option value="">Bitte wählen</option> <option value="wartung">Wartung &amp; Inspektion</option> <option value="reparatur">Reparaturen</option> <option value="diagnose">Diagnose &amp; Analyse</option> <option value="tuning">Performance-Tuning</option> </select>
+         <label for="service" class="c-form__label">Gewünschte Dienstleistung</label> <select id="service" name="service" class="c-form__input" required=""> <option value="">Bitte wählen</option> <option value="wartung">Wartung &amp; Inspektion</option> <option value="reparatur">Reparaturen</option> <option value="diagnose">Diagnose &amp; Analyse</option> <option value="tuning">Performance-Tuning</option> </select>
          <div class="c-form__error"></div>
         </div>
         <div class="c-form__group">
-         <label for="message" class="c-form__label">Nachricht</label> <textarea id="message" name="message" class="c-form__textarea" rows="5" required></textarea>
+         <label for="message" class="c-form__label">Nachricht</label> <textarea id="message" name="message" class="c-form__textarea" rows="5" required=""></textarea>
          <div class="c-form__error"></div>
         </div>
         <div class="c-form__group">
-         <label class="c-form__checkbox"> <input type="checkbox" name="privacy" required> <span>Ich habe die <a href="privacy.html">Datenschutzerklärung</a> gelesen und stimme zu.</span> </label>
+         <label class="c-form__checkbox"> <input type="checkbox" name="privacy" required=""> <span>Ich habe die <a href="privacy.html">Datenschutzerklärung</a> gelesen und stimme zu.</span> </label>
          <div class="c-form__error"></div>
         </div>
         <button type="submit" class="c-button c-button--full">Termin anfragen</button>
@@ -309,7 +307,7 @@
   <footer class="l-footer">
    <div class="l-container l-footer__wrapper">
     <div class="l-footer__brand">
-     <a href="index.html" class="c-logo"> <img src="https://images.unsplash.com/photo-1599305445671-ac291c95aaa9?w=150&amp;h=40&amp;fit=crop" alt="AutoElite Deutschland Logo" class="c-logo__img" decoding="async" loading="lazy" width="150" height="40"> <span class="c-logo__text">AutoElite Deutschland</span> </a>
+     <a href="index.html" class="c-logo"> <img src="img/etikett-made-in-germany.jpg" alt="AutoElite Deutschland Logo" class="c-logo__img" decoding="async" loading="lazy" width="150" height="40"> <span class="c-logo__text">AutoElite Deutschland</span> </a>
      <div class="l-footer__contact">
       <p><strong>Adresse:</strong> Königsallee 60, 40212 Düsseldorf, Deutschland</p>
       <p><strong>Telefon:</strong> <a href="tel:+492118632450">+49-211-8632-4500</a></p>
@@ -327,6 +325,6 @@
     <p class="l-footer__copyright">© 2025 AutoElite Deutschland. Alle Rechte vorbehalten.</p>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
